--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
     "stylus-loader": "^1.5.1",
+    "superagent": "^1.7.2",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.3.2",
     "vue-html-loader": "^1.1.0",
