--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "url": "git@github.com:ts020/v-ui.git"
   },
   "dependencies": {
-    "vue": "^1.0.16"
+    "vue": "^1.0.16",
+    "lib": "file:lib"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
