--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "v-ui",
   "description": "ui components built with Vue.js",
   "author": "takanori sugawara <takanori.sugawara@gmail.com>",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "scripts": {
     "dev": "webpack-dev-server --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
@@ -12,6 +12,7 @@
     "url": "git@github.com:ts020/v-ui.git"
   },
   "dependencies": {
+    "olibe": "git+https://github.com/ts020/olibe.git",
     "vue": "^1.0.16"
   },
   "devDependencies": {
