--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "highlight": "^0.2.4",
-    "olibe": "git+https://github.com/ts020/olibe.git",
+    "olibe": "0.0.3",
     "vue": "^1.0.16"
   },
   "devDependencies": {
